--- a/Launcher/LauncherWFP/Resources/Text/Errors.resx
+++ b/Launcher/LauncherWFP/Resources/Text/Errors.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BUILDMANAGER_BUILDID_EXISTS" xml:space="preserve">
+    <value>The supplied BuildId ({0}) already exists.</value>
+  </data>
   <data name="BUILDMANAGER_INITIALIZE_ERROR" xml:space="preserve">
     <value>Cannot initialize the BuildManager. Configuration not setup.</value>
   </data>
